# pin-gcc-client

./: CMakeLists.txt  PluginClient.cpp  Plugin_Log.cpp  README.en.md  README.md  ir_trans_plugin.cpp
cmake/: common.cmake
configs/: pin-gcc-client.json
include/: PluginClient.h  Plugin_Log.h
include/Conversion/: GimpleToPlugin.h  ToPluginInterface.h
include/Dialect/: PluginDialect.h  PluginDialect.td  PluginOps.h  PluginOps.td  PluginTypes.h
include/IR/: Decl.h  Operation.h  Type.h
include/IRTrans/: IRTransPlugin.h
include/PluginAPI/: BasicPluginAPI.h  BasicPluginOpsAPI.h  PluginAPI_Client.h  PluginClientAPI.h
include/PluginClient/: GrpcKey.def  GrpcValue.def  JsonKey.def  PassValue.def  PluginClient.h  PluginGrpcPort.h  PluginInputCheck.h  PluginJson.h  PluginLog.h
include/Translate/: GimpleToPluginOps.h  ToPluginOpsInterface.h  TypeTranslation.h
include/gccPlugin/: gccPlugin.h
lib/: CMakeLists.txt
lib/Conversion/: GimpleToPlugin.cpp
lib/Dialect/: CMakeLists.txt  PluginDialect.cpp  PluginOps.cpp  PluginTypes.cpp
lib/IRTrans/: IRTransPlugin.cpp
lib/PluginAPI/: PluginAPI.cpp  PluginClientAPI.cpp
lib/PluginClient/: PluginClient.cpp  PluginGrpcPort.cpp  PluginInputCheck.cpp  PluginJson.cpp  PluginLog.cpp
lib/Translate/: GimpleToPluginOps.cpp  TypeTranslation.cpp
lib/gccPlugin/: gccPlugin.cpp
